# tray

./: .editorconfig  CMakeLists.txt  README.md
tray/: CMakeLists.txt
tray/src/: main.cpp
tray/src/tray/: hit.cpp  hit.hpp  image.cpp  image.hpp  io.cpp  io.hpp  light.hpp  material.hpp  nvec3.hpp  ray.hpp  renderable.hpp  rgb.hpp  scene.cpp  scene.hpp  sphere.hpp  vec.hpp  viewport.hpp
